render db on new view

--- a/views/tabla.pug
+++ b/views/tabla.pug
@@ -1,4 +1,9 @@
 extends layout
 
 block content
-  h1 Aquí hay una tabla
+  main.container
+    .row
+      .col-md-6.col-md-offset-3
+      h1.display-4.m-b-2.text-center Datos
+
+      p #{datos[0].nombre}
