--- a/views/tabla.pug
+++ b/views/tabla.pug
@@ -5,5 +5,5 @@ block content
     .row
       .col-md-6.col-md-offset-3
       h1.display-4.m-b-2.text-center Datos
-
-      p #{datos[0].nombre}
+      each val in datos
+        p #{val.nombre} -  #{val.vendedor} - $#{val.precio}
