--- a/views/tabla.pug
+++ b/views/tabla.pug
@@ -5,5 +5,8 @@ block content
     .row
       .col-md-6.col-md-offset-3
       h1.display-4.m-b-2.text-center Datos
-      each val in datos
-        p #{val.nombre} -  #{val.vendedor} - $#{val.precio}
+      ul
+        each val, index in datos
+          li= val.nombre
+          li= val.vendedor
+          li= val.precio
