--- a/views/index.pug
+++ b/views/index.pug
@@ -16,3 +16,5 @@ block content
             input#txtClave.form-control(type='password', placeholder='La clave para entrar', name='txtClave')
             br
             button.btn.btn-primary(type='submit') Enviar
+            br
+            p.b-danger=mensaje
